objects/fferpcore__ErpMessagingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings that enable you to change messaging behavior in Foundations.</description>
    <fields>
        <fullName>fferpcore__LoggingLevel__c</fullName>
        <defaultValue>&quot;Errors&quot;</defaultValue>
        <label>Logging Level</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__QueryBuilderMaximumLookdowns__c</fullName>
        <label>Query Builder Maximum Lookdowns</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__QueryBuilderMaximumLookupDepth__c</fullName>
        <label>Query Builder Maximum Lookup Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__QueryBuilderMaximumRelationships__c</fullName>
        <label>Query Builder Maximum Relationships</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FDN Messaging Settings</label>
</CustomObject>